syntax = "proto3";
package distrifs;

message Empty {}

message Endpoint {
  string host = 1;
  int32 port = 2;
}

// --------------------
// DataNode <-> Master
// --------------------
message RegisterRequest {
  int32 data_port = 1;
  int32 control_port = 2;
}
message RegisterResponse { string node_id = 1; }

message HeartbeatRequest { string node_id = 1; }

message ChunkVersion {
  string chunk_id = 1;
  int32 version = 2;
}
message BlockReportRequest {
  string node_id = 1;
  repeated ChunkVersion chunks = 2;
}

// --------------------
// Namespace
// --------------------
message MkdirRequest {
  string path = 1;
  string owner = 2;
  int32 mode = 3;
}

message ListDirRequest { string path = 1; }
message ListDirResponse {
  repeated string dirs = 1;
  repeated string files = 2;
}

message StatRequest { string path = 1; }
message StatResponse {
  string type = 1;  // "dir" or "file"
  string owner = 2;
  int32 mode = 3;
  int32 chunks = 4;
  int64 size = 5;
}

// --------------------
// Write planning
// --------------------
message AssignChunkRequest {
  string path = 1;
  int32 index = 2;
}
message AssignChunkResponse {
  string chunk_id = 1;
  int32 version = 2;
  repeated Endpoint pipeline = 3;
}

message CommitChunkRequest {
  string path = 1;
  int32 index = 2;
  string chunk_id = 3;
  int32 version = 4;
  uint32 checksum = 5;
  int32 size = 6;
  repeated string node_ids = 7;
}

// --------------------
// Read planning
// --------------------
message GetFilePlanRequest { string path = 1; }

message FileChunk {
  int32 index = 1;
  string chunk_id = 2;
  int32 version = 3;
  uint32 checksum = 4;
  int32 size = 5;
  repeated Endpoint replicas = 6;
}

message GetFilePlanResponse { repeated FileChunk chunks = 1; }

// --------------------
// Master -> DataNode control plane
// --------------------
message ReplicateChunkRequest {
  string chunk_id = 1;
  int32 version = 2;
  Endpoint target = 3;
}
message DeleteChunkRequest { string chunk_id = 1; }

// --------------------
// Services
// --------------------
service MasterService {
  rpc RegisterDataNode(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(HeartbeatRequest) returns (Empty);
  rpc BlockReport(BlockReportRequest) returns (Empty);

  rpc Mkdir(MkdirRequest) returns (Empty);
  rpc ListDir(ListDirRequest) returns (ListDirResponse);
  rpc Stat(StatRequest) returns (StatResponse);

  rpc AssignChunk(AssignChunkRequest) returns (AssignChunkResponse);
  rpc CommitChunk(CommitChunkRequest) returns (Empty);
  rpc GetFilePlan(GetFilePlanRequest) returns (GetFilePlanResponse);
}

service DataNodeControl {
  rpc ReplicateChunk(ReplicateChunkRequest) returns (Empty);
  rpc DeleteChunk(DeleteChunkRequest) returns (Empty);
}
